--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^19.1.0",
         "react-color": "^2.19.3",
         "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
         "react-loading": "^2.0.3",
         "react-router-dom": "^7.6.1",
         "react-spinners": "^0.17.0",
