--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "axios": "^1.9.0",
-        "react": "^19.1.0",
+        "react": "^19.2.0",
         "react-color": "^2.19.3",
-        "react-dom": "^19.1.0",
+        "react-dom": "^19.2.0",
         "react-icons": "^5.5.0",
         "react-loading": "^2.0.3",
         "react-router-dom": "^7.6.1",
         "react-spinners": "^0.17.0",
-        "sweetalert2": "^11.22.0"
+        "react-toastify": "^11.0.5",
+        "sweetalert2": "^11.22.0",
+        "toastify": "^2.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
