--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@react-google-maps/api": "^2.20.7",
         "axios": "^1.9.0",
         "react": "^19.2.0",
         "react-color": "^2.19.3",
